New Courses & corrected some mistakes

--- a/sections/ReferenceBook.tex
+++ b/sections/ReferenceBook.tex
@@ -1,7 +1,7 @@
 \addcontentsline{toc}{section}{参考文献}
 \begin{thebibliography}{99}
     \bibitem{讲义}
-    清华大学统计学研究中心 辅修课程课件与讲义. W. Deng, J. Wang, Z. Zhou, D. Li, T. Wang, S. Yu.
+    清华大学统计学研究中心 辅修课程课件与讲义. W. Deng, J. Wang, Z. Zhou, D. Li, T. Wang, S. Yu, P. Yang.
     \bibitem{Springer参考书系列}
     Springer Series in Statistics (SSS). \url{https://www.springer.com/series/692}
     \bibitem{RStudioCheatSheets}
@@ -52,7 +52,10 @@
     Causal Inference for Statistics, Social, and Biomedical Sciences: An Introduction. Guido W. Imbens \& Donald B. Rubin. Cambridge University Press.
     \bibitem{因果推断ref2}
     Causal Inference in Statistics - A Primer. Judea Pearl. Wiley.
-
+    \bibitem{随机过程ref1}
+    Random Processes for Engineers. Bruce Hajek. Cambridge University Press
+    \bibitem{随机过程ref2}
+    应用随机过程. 林元烈. 
 
 
 \end{thebibliography}
