--- a/sections/统计计算与软件.tex
+++ b/sections/统计计算与软件.tex
@@ -97,7 +97,7 @@
     \item Backward Error: $ \Delta _B=\mathop{\arg\min}\limits_{f(\tilde{x})=\tilde{f}(x)} |\tilde{x}-x|  $
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\linewidth]{sections/images/ForwardError.png}
+    \includegraphics[width=0.45\linewidth]{sections/images/ForwardError.png}
     \caption{Illustration of Forward/Backward Error}
 \end{figure}
 
@@ -2960,7 +2960,7 @@ Markov Chain Monte Carlo (MCMC) aims at solving integration and simulation probl
     
     Convergence and Ergodic Thm.:\index{Convergence and Ergodic Theorem} An ergodic markov chain converges to a unique stationary distribution $ \pi_\infty $
     \begin{align}
-        \pi_{infty}=\lim_{n\to\infty}P^n\pi_0 
+        \pi_{\infty}=\lim_{n\to\infty}P^n\pi_0 
     \end{align}
     where $ \pi_0 $ is an arbitrary initial distribution.
     
