--- a/sections/数据科学导论.tex
+++ b/sections/数据科学导论.tex
@@ -167,7 +167,7 @@ Comparison of \lstinline|R|, \lstinline|python|:focus on different aspects of `S
         
         where \lstinline|c()| for `combine'; 
         
-        \lstinline|c()| combines all things into one vector, e.g. \lstinline|c(c(1,2,3),c(1,2))=(1,2,3,4,5)|.
+        \lstinline|c()| combines all things into one vector, e.g. \lstinline|c(c(1,2,3),c(1,2))=c(1,2,3,4,5)|.
         \item Sequence vector: 
         \begin{itemize}[topsep=2pt,itemsep=0pt]
             \item \lstinline|1:3.5=c(1,2,3)|, \lstinline|3:1=c(3,2,1)|
@@ -725,8 +725,9 @@ match(vec1,vec2)
 
         
 Basic \lstinline|html| document format:
+
 \begin{rcode}
-\begin{lstlisting}[language=R]
+\begin{lstlisting}[language=HTML]
 <!DOCTYPE html> # an html document
 <html> # html page begin
 <head> # head elements declare
@@ -956,7 +957,7 @@ aes(x = mpg ^ 2, y = wt / cyl, col = am)
         \hline
         \lstinline|geom_bar()|          &bar plot       &\lstinline|color, fill, alpha|\\
         \lstinline|geom_boxplot()|      &box plot       &\lstinline|color, fill, alpha, notch, width|\\
-        \lstinline|geom_density|        &density plot   &\lstinline|color, fill, alpha, linetype|\\
+        \lstinline|geom_density()|        &density plot   &\lstinline|color, fill, alpha, linetype|\\
         \lstinline|geom_histogram()|    &histogram      &\lstinline|color, fill, alpha, linetype, binwidth|\\
         \lstinline|geom_hline()|        &horizontal line            &\lstinline|color, alpha, linetype, size|\\
         \lstinline|geom_vline()|        &vertical line            &\lstinline|color, alpha, linetype, size|\\
